--- a/wp-content/themes/storevilla/assets/scss/abstracts/_variables.scss
+++ b/wp-content/themes/storevilla/assets/scss/abstracts/_variables.scss
@@ -5,8 +5,11 @@ $bp-tablet: 1024px;
 $bp-mobile: 768px;
 
 // Color //
-
 $c-eclipse: #404040;
+$c-light-grey: #cccccc;
 $c-pacific-blue: #0091d5;
 $c-red-pink: #f85570;
+$c-white: #ffffff;
 
+// Layout //
+$logo-size: 100px;
