--- a/wp-content/themes/storevilla/assets/scss/pages/_product.scss
+++ b/wp-content/themes/storevilla/assets/scss/pages/_product.scss
@@ -1,5 +1,16 @@
 /* Product page custom styles */
 
+// Content //
+.product {
+    .quantity {
+        .input-text {
+            &.text {
+                border: none;
+            }
+        }
+    }
+}
+
 // Description //
 .woocommerce-tabs {
     &.wc-tabs-wrapper {
@@ -8,6 +19,21 @@
 
             a {
                 color: $c-pacific-blue;
+            }
+        }
+    }
+}
+
+// Listing //
+.woocommerce {
+    ul.products {
+        li.product {
+            .product-button-wrap {
+                a {
+                    padding-right: 30px;
+                    text-align: center;
+                    width: 100%;
+                }
             }
         }
     }
